[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Pages/entityFieldItem.gd" type="Script" id=1]

[node name="EntityTypeContainer" type="HBoxContainer"]
anchor_right = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 5.0
rect_min_size = Vector2( 100, 40 )
script = ExtResource( 1 )

[node name="TextBtn" type="Button" parent="."]
margin_right = 974.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Test Text"

[node name="DeleteBtn" type="Button" parent="."]
margin_left = 978.0
margin_right = 1014.0
margin_bottom = 40.0
text = "  X  "
align = 2

[connection signal="button_down" from="TextBtn" to="." method="_on_TextBtn_button_down"]
[connection signal="button_down" from="DeleteBtn" to="." method="_on_DeleteBtn_button_down"]
